Fix for #548 - List of Spring guides are difficult to read on mobile.

--- a/sagan-client/src/css/guide.css
+++ b/sagan-client/src/css/guide.css
@@ -43,6 +43,13 @@
 .guides-section--container .guides--wrapper {
   margin-right: -40px;
 }
+
+@media (max-width:600px){
+  .guides-section--container .guide--container {
+    width: 100%;
+  }
+}
+
 .guides-section--container .guide--container {
   display: inline-block;
   width: 29.269%;
